src/app/form-gv/form-gv.component.scss
/* ... */
.desktop {
    display: flex !important;
}

.mobile {
    display: none !important;
}

@media (max-width: 600px) {
    .desktop {
        display: none !important;
    }
    .mobile {
        display: block !important;
        &.mobile-icon {
            display: flex !important;
            margin-right: 0;
            align-items: center;
            background: #ED482D;
            padding: 0 10px;
            border-bottom: 2px solid #f6a496;
            min-width: 35px;
            justify-content: center;
        }
    }
}

// form A/B - end
.forms-term {
    textarea {
        margin-bottom: 5px;
    }
    .forms-tem-accepted {
        font-size: 12px;
        display: block;
        margin: 0 auto 15px auto;
        text-align: center;
    }
}

.loading-animation-gv {
    background-image: url('/assets/images/sent-gv.png');
    background-size: 50%;
    background-position: center center;
    background-repeat: no-repeat;
}

.checkbox {
    margin: 15px auto 0 auto;
}

.checkbox input[type="checkbox"] {
    opacity: 0;
}

.checkbox label::before {
    content: "";
    display: inline-block;
    height: 16px;
    width: 16px;
    border: 1px solid;
}

.checkbox label::after {
    content: "";
    display: inline-block;
    height: 6px;
    width: 9px;
    border-left: 2px solid;
    border-bottom: 2px solid;
    transform: rotate(-45deg);
}

.checkbox label {
    position: relative;
}

.checkbox label::before,
.checkbox label::after {
    position: absolute;
}

/*Outer-box*/

.checkbox label::before {
    top: 3px;
    left: -25px;
}

/*Checkmark*/

.checkbox label::after {
    left: -21px;
    top: 7px;
}

/*Hide the checkmark by default*/

.checkbox input[type="checkbox"]+label::after {
    content: none;
}

/*Unhide the checkmark on the checked state*/

.checkbox input[type="checkbox"]:checked+label::after {
    content: "";
}

/*Adding focus styles on the outer-box of the fake checkbox*/

.checkbox input[type="checkbox"]:focus+label::before {
    outline: rgb(255, 255, 255) auto 5px;
}

html {
    overflow-y: scroll;
    overflow-x: hidden;
    scroll-behavior: smooth;
}

* {
    font-family: 'Lato', sans-serif;
}

body {
    margin: 0;
    padding: 0;
}

::-webkit-scrollbar {
    width: 5px;
}

/* Track */

::-webkit-scrollbar-track {
    background: #f1f1f1;
}

/* Handle */

::-webkit-scrollbar-thumb {
    background: #888;
    border-radius: 10px;
}

/* Handle on hover */

::-webkit-scrollbar-thumb:hover {
    background: #555;
}

.messages {
    position: fixed;
    right: 25px;
    top: 25px;
    color: #000;
    background-color: #fff;
    z-index: 999;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    box-shadow: 2px 2px 3px;
    .ui-growl-title {
        font-weight: 600;
        padding: 15px;
        margin-top: 0;
    }
    .ui-growl-message {
        padding-top: 10px;
    }
    p {
        margin: 0;
        padding: 0px 15px 10px 15px;
    }
}

.styled-select {
    border: 0 !important;
    box-sizing: border-box;
    border-radius: 3px;
    overflow: hidden;
    position: absolute;
    z-index: 9999;
}

.styled-select,
.styled-select select {
    width: 100%;
    color: #fff !important;
    option {
        color: #000000;
        font-size: 18px;
    }
}

select:focus {
    outline: none;
}

.styled-select select {
    height: 50px;
    padding: 5px 20px 5px 5px;
    background: transparent;
    border: 0 !important;
    /*hide default down arrow in webkit */
    -webkit-appearance: none;
    background-image: url('/assets/images/select.png');
    background-size: 13px;
    background-repeat: no-repeat;
    background-position: right center;
}

.select-dropdown {
    justify-content: space-between;
    flex-wrap: wrap !important;
    background-color: #ed482d;
    border-bottom: 2px solid rgba(255, 255, 255, .5);
    padding-right: 10px;
    position: relative;
}

.select-dropdown div.input-group-prepend>div {
    border-bottom: 0;
}

@-moz-document url-prefix() {
    .styled-select select {
        width: 110%;
    }
}

.fa-sort-desc {
    position: absolute;
    top: 0;
    right: 12px;
    font-size: 24px;
}

select::-ms-expand {
    display: none;
}

/* hide default down arrow in IE10*/

/* hack to fall back in opera */

_:-o-prefocus,
.selector {
    .styled-select {
        background: none;
    }
}

// TODO: ::ng-deep / /deep/ 
// Seems to be a form of selection that will be abolished in the future, an alternative form of editing of this component should be found without the use of these selectors.
/*
    Links de referência:
    https://angular.io/guide/component-styles
    https://stackoverflow.com/questions/42134355/the-use-of-deep-and-in-angular-2
*/

::ng-deep .p-inputMask {
    padding-right: 30px !important;
}

::ng-deep .p-inputMask input {
    background-color: transparent !important;
    border: 0 !important;
    position: relative;
    flex: 1 1 auto;
    text-align: right;
    margin: 0;
    min-width: 400px;
    padding: 10px 30px 6px 12px;
}
/* ... */

